--- a/app/views/questions/answer.html.erb
+++ b/app/views/questions/answer.html.erb
@@ -1,6 +1,17 @@
-<p class="info">
-  <mark>- You...</p></mark>
-<p> <%= @ask %> </p>
-<p> <mark>- Your coach... </mark> </p>
-<p> <%= @answer%> </p>
+<blockquote class="info">
+  <mark>- You...</mark>
+  <p>
+    <% if @question.blank? %>
+      :>
+    <% else %>
+      <%= @question %>
+    <% end %>
+  </p>
+</blockquote>
+
+<blockquote class="coach">
+  <p> <mark>- Your coach... </mark> </p>
+  <p> <%= @answer%> </p>
+</blockquote>
+
 <p> <%= link_to "Ask a new question", ask_path %> </p>
