--- a/app/views/questions/ask.html.erb
+++ b/app/views/questions/ask.html.erb
@@ -1,5 +1,7 @@
 <p>Ask your coach anything:</p>
 <form action="/answer" data-turbo="false">
-  <input type="text" name="answer">
-  <input type="submit" value="Ask!">
+  <div class="input-group">
+    <input type="text" name="question" class="form-control">
+    <input type="submit" value="Ask" class="btn btn-danger">
+  </div>
 </form>
